// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ CodeCoverageTableLoading ]] renders code coverage table in loading state with all prop options: {"isWidget":false} 1`] = `
"<section class=\\"overflow-x-auto leading-normal rounded-md border border-ink-200\\">
  <table class=\\"table-fixed cursor w-full\\">
    <thead class=\\"border-b border-ink-200\\">
      <tr class=\\"uppercase text-vanilla-400 text-xs font-semibold\\">
        <th class=\\"py-2.5 text-left w-48 pl-4 sm:w-auto\\">
          Repository
        </th>
        <th class=\\"text-right w-40 pr-2\\">
          <zbutton-stub color=\\"vanilla-400\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"x-small\\" disabled=\\"true\\" to=\\"\\">
            <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">Line Coverage</span>
              <zicon-stub icon=\\"arrow-up-down\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
            </div>
          </zbutton-stub>
        </th>
        <th class=\\"text-right w-48 pr-2\\">
          <zbutton-stub color=\\"vanilla-400\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"x-small\\" disabled=\\"true\\" to=\\"\\">
            <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">Branch Coverage</span>
              <zicon-stub icon=\\"arrow-up-down\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
            </div>
          </zbutton-stub>
        </th>
      </tr>
    </thead>
    <tbody class=\\"divide-y divide-ink-200\\">
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-4\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
    </tbody>
  </table>
</section>"
`;

exports[`[[ CodeCoverageTableLoading ]] renders code coverage table in loading state with all prop options: {"isWidget":true} 1`] = `
"<section class=\\"overflow-x-auto leading-normal max-h-92 overflow-y-auto\\">
  <table class=\\"table-fixed cursor w-full\\">
    <thead class=\\"border-b border-ink-200\\">
      <tr class=\\"uppercase text-vanilla-400 text-xs font-semibold\\">
        <th class=\\"py-2.5 text-left w-48 pl-5\\">
          Repository
        </th>
        <th class=\\"text-right w-28\\">
          <zbutton-stub color=\\"vanilla-400\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"x-small\\" disabled=\\"true\\" to=\\"\\">
            <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">Line</span>
              <zicon-stub icon=\\"arrow-up-down\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
            </div>
          </zbutton-stub>
        </th>
        <th class=\\"text-right w-28 pr-5\\">
          <zbutton-stub color=\\"vanilla-400\\" iconcolor=\\"\\" label=\\"\\" loadinglabel=\\"\\" as=\\"button\\" justify=\\"center\\" buttontype=\\"ghost\\" type=\\"button\\" size=\\"x-small\\" disabled=\\"true\\" to=\\"\\">
            <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">Branch</span>
              <zicon-stub icon=\\"arrow-up-down\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
            </div>
          </zbutton-stub>
        </th>
      </tr>
    </thead>
    <tbody class=\\"divide-y divide-ink-200\\">
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
      <tr class=\\"h-11\\">
        <td class=\\"py-2.5 text-left pl-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px w-48\\"></div>
        </td>
        <td class=\\"py-2.5 pr-4 pl-16 text-right\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
        <td class=\\"py-2.5 pl-24 text-right pr-5\\">
          <div class=\\"bg-ink-300 animate-pulse rounded-md h-5 mb-px\\"></div>
        </td>
      </tr>
    </tbody>
  </table>
</section>"
`;
